[package]
name = "cltv-scan"
version = "0.1.0"
edition = "2024"
description = "Bitcoin timelock vulnerability scanner"
license = "MIT"

[dependencies]
anyhow = "1"
async-stream = "0.3"
futures-core = "0.3"
axum = "0.8"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
moka = { version = "0.12", features = ["future"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
